--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,136 @@
-langchain.chains
-langchain.chat_models
-enum
-pydantic
-streamlit
-pandas
-os
+absl-py==1.4.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+altair==5.0.1
+arxiv==1.4.8
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==23.1.0
+beautifulsoup4==4.12.2
+blinker==1.6.2
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.6
+colorama==0.4.6
+comtypes==1.2.0
+contourpy==1.1.0
+cycler==0.11.0
+dataclasses-json==0.5.14
+Faker==19.3.0
+favicon==0.7.0
+feedparser==6.0.10
+flatbuffers==23.5.26
+fonttools==4.42.0
+frozenlist==1.4.0
+gast==0.4.0
+gitdb==4.0.10
+GitPython==3.1.32
+google-auth==2.22.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+greenlet==2.0.2
+grpcio==1.56.2
+gTTS==2.3.2
+h5py==3.9.0
+htbuilder==0.6.1
+idna==3.4
+importlib-metadata==6.8.0
+Jinja2==3.1.2
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+keras==2.13.1
+kiwisolver==1.4.4
+langchain==0.0.259
+langsmith==0.0.20
+libclang==16.0.6
+lxml==4.9.3
+Markdown==3.4.4
+markdown-it-py==3.0.0
+markdownlit==0.0.7
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+matplotlib==3.7.2
+mdurl==0.1.2
+more-itertools==10.1.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+numexpr==2.8.5
+numpy==1.24.3
+oauthlib==3.2.2
+openai==0.27.8
+openapi-schema-pydantic==1.2.4
+opencv-python==4.8.0.74
+opt-einsum==3.3.0
+packaging==23.1
+pandas==2.0.3
+Pillow==9.5.0
+protobuf==4.23.4
+pyarrow==12.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pydantic==1.10.12
+pydeck==0.8.0
+pygame==2.5.0
+Pygments==2.16.1
+pymdown-extensions==10.1
+Pympler==1.0.1
+pyparsing==3.0.9
+pypiwin32==223
+pytesseract==0.3.10
+python-dateutil==2.8.2
+pyttsx3==2.90
+pytz==2023.3
+pytz-deprecation-shim==0.1.0.post0
+pywin32==306
+PyYAML==6.0.1
+referencing==0.30.2
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.5.2
+rpds-py==0.9.2
+rsa==4.9
+scipy==1.11.1
+sgmllib3k==1.0.0
+six==1.16.0
+smmap==5.0.0
+sounddevice==0.4.6
+soupsieve==2.4.1
+SpeechRecognition==3.10.0
+SQLAlchemy==2.0.19
+st-annotated-text==4.0.0
+streamlit==1.25.0
+streamlit-camera-input-live==0.2.0
+streamlit-card==0.0.61
+streamlit-embedcode==0.1.2
+streamlit-extras==0.3.0
+streamlit-faker==0.0.2
+streamlit-image-coordinates==0.1.6
+streamlit-keyup==0.2.0
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==1.0.2
+tenacity==8.2.2
+tensorboard==2.13.0
+tensorboard-data-server==0.7.1
+tensorflow==2.13.0
+tensorflow-estimator==2.13.0
+tensorflow-intel==2.13.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==2.3.0
+toml==0.10.2
+toolz==0.12.0
+tornado==6.3.2
+tqdm==4.65.0
+typing-inspect==0.9.0
+typing_extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==1.26.16
+validators==0.21.2
+watchdog==3.0.0
+Werkzeug==2.3.6
+wrapt==1.15.0
+yarl==1.9.2
+zipp==3.16.2
